/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package Masters_Proj;

import java.awt.image.BufferedImage;
import java.io.File;
import java.io.IOException;
import javax.imageio.ImageIO;
import javax.swing.JFileChooser;
import javax.swing.JOptionPane;

/**
 *The DecodeFrame has the user pick the two encoded images to be decoded.
 * The user also has the option to specify the decrypted image's name
 * and where the decoded image get stored.
 * 
 * @author allisonholt
 * @version 03-23-2016
 */
public class DecodeFrame extends javax.swing.JFrame {

    /**
     * Creates new form DecodeFrame.
     */
    public DecodeFrame() {
        initComponents();
        this.setLocationRelativeTo(null);
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        imageChooser = new javax.swing.JFileChooser();
        directoryChooser = new javax.swing.JFileChooser();
        jPanel1 = new javax.swing.JPanel();
        jLabel1 = new javax.swing.JLabel();
        encodedTextField1 = new javax.swing.JTextField();
        browseButton1 = new javax.swing.JButton();
        encodedTextField2 = new javax.swing.JTextField();
        browseButton2 = new javax.swing.JButton();
        jPanel2 = new javax.swing.JPanel();
        jLabel2 = new javax.swing.JLabel();
        jLabel3 = new javax.swing.JLabel();
        stackedTextField = new javax.swing.JTextField();
        jLabel4 = new javax.swing.JLabel();
        storageDirectoryTextField = new javax.swing.JTextField();
        browseButton3 = new javax.swing.JButton();
        jButton2 = new javax.swing.JButton();
        decodeButton = new javax.swing.JButton();

        imageChooser.setDialogTitle("Choose an Image");
        imageChooser.setFileFilter(new ImageCustomFilter());

        directoryChooser.setDialogTitle("Choose a Directory");
        directoryChooser.setFileFilter(new DirectoryCustomFilter());
        directoryChooser.setFileSelectionMode(javax.swing.JFileChooser.DIRECTORIES_ONLY);

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);

        jPanel1.setBorder(javax.swing.BorderFactory.createTitledBorder("Encoded Images"));

        jLabel1.setText("Please select your two encoded image files:*");

        encodedTextField1.addKeyListener(new java.awt.event.KeyAdapter() {
            public void keyTyped(java.awt.event.KeyEvent evt) {
                validateDecodeButton(evt);
            }
        });

        browseButton1.setText("Browse");
        browseButton1.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                imageBrowsePressed(evt);
            }
        });

        encodedTextField2.addKeyListener(new java.awt.event.KeyAdapter() {
            public void keyTyped(java.awt.event.KeyEvent evt) {
                validateDecodeButton(evt);
            }
        });

        browseButton2.setText("Browse");
        browseButton2.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                imageBrowsePressed(evt);
            }
        });

        javax.swing.GroupLayout jPanel1Layout = new javax.swing.GroupLayout(jPanel1);
        jPanel1.setLayout(jPanel1Layout);
        jPanel1Layout.setHorizontalGroup(
            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanel1Layout.createSequentialGroup()
                .addContainerGap()
                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addGroup(jPanel1Layout.createSequentialGroup()
                        .addComponent(jLabel1)
                        .addGap(0, 310, Short.MAX_VALUE))
                    .addGroup(jPanel1Layout.createSequentialGroup()
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
                            .addComponent(encodedTextField2)
                            .addComponent(encodedTextField1))
                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                            .addComponent(browseButton1)
                            .addComponent(browseButton2))))
                .addContainerGap())
        );
        jPanel1Layout.setVerticalGroup(
            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanel1Layout.createSequentialGroup()
                .addContainerGap()
                .addComponent(jLabel1)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(encodedTextField1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(browseButton1))
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(encodedTextField2, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(browseButton2))
                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
        );

        jPanel2.setBorder(javax.swing.BorderFactory.createTitledBorder("Optional"));

        jLabel2.setText("File Name for Decrypted Secret:");

        jLabel3.setText("Name (without extension):");

        jLabel4.setText("Directory for Decrypted Image:");

        browseButton3.setText("Browse");
        browseButton3.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                directoryBrowsePressed(evt);
            }
        });

        javax.swing.GroupLayout jPanel2Layout = new javax.swing.GroupLayout(jPanel2);
        jPanel2.setLayout(jPanel2Layout);
        jPanel2Layout.setHorizontalGroup(
            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanel2Layout.createSequentialGroup()
                .addContainerGap()
                .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addGroup(jPanel2Layout.createSequentialGroup()
                        .addComponent(jLabel2)
                        .addGap(0, 0, Short.MAX_VALUE))
                    .addGroup(jPanel2Layout.createSequentialGroup()
                        .addGap(6, 6, 6)
                        .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                            .addGroup(jPanel2Layout.createSequentialGroup()
                                .addComponent(jLabel3)
                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                                .addComponent(stackedTextField))
                            .addGroup(jPanel2Layout.createSequentialGroup()
                                .addComponent(jLabel4)
                                .addGap(0, 0, Short.MAX_VALUE))
                            .addGroup(jPanel2Layout.createSequentialGroup()
                                .addComponent(storageDirectoryTextField)
                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                .addComponent(browseButton3)))))
                .addContainerGap())
        );
        jPanel2Layout.setVerticalGroup(
            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanel2Layout.createSequentialGroup()
                .addContainerGap()
                .addComponent(jLabel2)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(jLabel3)
                    .addComponent(stackedTextField, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
                    .addGroup(jPanel2Layout.createSequentialGroup()
                        .addComponent(jLabel4)
                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                        .addComponent(storageDirectoryTextField, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
                    .addComponent(browseButton3))
                .addContainerGap(19, Short.MAX_VALUE))
        );

        jButton2.setText("Cancel");
        jButton2.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                cancelPressed(evt);
            }
        });

        decodeButton.setText("Decode");
        decodeButton.setEnabled(validateDecodeButtonWithBrowse());
        decodeButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                decodePressed(evt);
            }
        });

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
        getContentPane().setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addContainerGap()
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addComponent(jPanel2, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                    .addComponent(jPanel1, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
                        .addGap(0, 0, Short.MAX_VALUE)
                        .addComponent(decodeButton)
                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                        .addComponent(jButton2)))
                .addContainerGap())
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addContainerGap()
                .addComponent(jPanel1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addComponent(jPanel2, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(jButton2)
                    .addComponent(decodeButton))
                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
        );

        pack();
    }// </editor-fold>//GEN-END:initComponents

    /**
     * Returns the user to the MainFrame when cancel button is pressed.
     * 
     * @param evt Event of the user hitting the cancel button
     */
    private void cancelPressed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_cancelPressed
        // TODO add your handling code here:
        this.setVisible(false);
        new MainFrame().setVisible(true);
    }//GEN-LAST:event_cancelPressed

    /**
     * Opens a file chooser to allow the user to select images (for the two 
     * encoded images).
     * 
     * @param evt Event of the user hitting the browse button to select the images
     * to be used for the decryption process
     */
    private void imageBrowsePressed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_imageBrowsePressed
        // TODO add your handling code here:
        int returnVal = imageChooser.showOpenDialog(this);
        if(returnVal == JFileChooser.APPROVE_OPTION)
        {
            File imageFile = imageChooser.getSelectedFile();
            if(evt.getSource() == browseButton1)
            {
                encodedTextField1.setText(imageFile.getAbsolutePath());
                shareFiles[0] = imageFile.getAbsolutePath();
            }
            else if(evt.getSource() == browseButton2)
            {
                encodedTextField2.setText(imageFile.getAbsolutePath());
                shareFiles[1] = imageFile.getAbsolutePath();
            }
        }
        decodeButton.setEnabled(validateDecodeButtonWithBrowse());
    }//GEN-LAST:event_imageBrowsePressed

    /**
     * Opens a file chooser to allow the user to select the directory to store
     * the decoded image.
     * 
     * @param evt Event of the user hitting the browse button for selecting a 
     * directory
     */
    private void directoryBrowsePressed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_directoryBrowsePressed
        // TODO add your handling code here:
        int returnVal = directoryChooser.showOpenDialog(this);
        if(returnVal == JFileChooser.APPROVE_OPTION)
        {
            File dir = directoryChooser.getSelectedFile();
            if(evt.getSource() == browseButton3)
            {
                storageDirectoryTextField.setText(dir.getAbsolutePath());
                directoryForStorage = dir.getAbsolutePath();
            }
        }
    }//GEN-LAST:event_directoryBrowsePressed

    /**
     * Decrypts the two encoded images into a single image that reveals the 
     * secret message when the user hits the decode button.
     * 
     * @param evt Event of the user hitting the decode button
     */
    private void decodePressed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_decodePressed
        // TODO add your handling code here:
        BufferedImage[] sharesEVCS = new BufferedImage[2];
        boolean fileFound = false;
        
        for(int i = 0; i < 2; i++)
        {
            try
            {
                sharesEVCS[i] = ImageIO.read(new File(shareFiles[i]));
                fileFound = true;
            }
            catch(IOException e)
            {
                JOptionPane.showMessageDialog(null, 
                    ("Error reading file share" + (i + 1)),
                    "ERROR", JOptionPane.ERROR_MESSAGE);
                fileFound = false;
            }
        }
        
        if(fileFound)
        {
            ExtendedVCS myEVCS = new ExtendedVCS(sharesEVCS);
            myEVCS.decryptImage();
            
            if(storageDirectoryTextField.getText().equals(""))
            {
                //Find OS first
                String os = System.getProperty("os.name");
                if(os.contains("Windows"))
                {
                    //Tested on jGRASP lab computer
                    String userPathToDesktop = System.getProperty("user.home");
                    userPathToDesktop = userPathToDesktop.replace('\\','/');
                    directoryForStorage = userPathToDesktop + "/Desktop";
                    
                }
                else if(os.contains("Mac"))
                {
                    String userPathToDesktop = System.getProperty("user.home");
                    //user.home returns "/Users/allisonholt"
                    directoryForStorage = userPathToDesktop + "/Desktop";
                }
                else
                {
                    JOptionPane.showMessageDialog(null, "Please use the browse button to specify\n"
                            + "where your secret shares will be placed.\nThe program cannot find "
                            + "your desktop.",
                    "WARNING", JOptionPane.WARNING_MESSAGE);
                    return;
                }
            }
            
            String decodedFileName;
            String secretFile, directory;
            directory = directoryForStorage;
            if(stackedTextField.getText().equals(""))
            {
                decodedFileName = directoryForStorage + "/secretMsg.png";
                secretFile = "secretMsg.png";
            }
            else
            {
                decodedFileName = directoryForStorage + "/" + stackedTextField.getText() + ".png";
                secretFile = stackedTextField.getText() + ".png";
            }
            
            try
            {
                BufferedImage decryptImage = new BufferedImage(myEVCS.getImgWidth(), myEVCS.getImgHeight(), BufferedImage.TYPE_INT_RGB);
                decryptImage.setRGB(0, 0, myEVCS.getImgWidth(), myEVCS.getImgHeight(), myEVCS.getDecryptImgPixels(), 0, myEVCS.getImgWidth());
                
                File tempOutput = new File(decodedFileName);
                ImageIO.write(decryptImage, "png", tempOutput);
                
                new MainFrame().setVisible(true);
                this.setVisible(false);
                JOptionPane.showMessageDialog(null, "Your decrypted image (" + secretFile
                    + ") has been created and stored in\n" + directory + ".",
                    "SUCCESS", JOptionPane.PLAIN_MESSAGE);
            }
            catch(IOException e)
            {
                JOptionPane.showMessageDialog(null, "Error decrypting your secret message",
                    "ERROR", JOptionPane.ERROR_MESSAGE);
            }
             
        }
    }//GEN-LAST:event_decodePressed

    /**
     * Keeps the decode button disabled until all of the required information
     * has been entered by the user.
     * 
     * @param evt Event of the user typing in the required text fields
     */
    private void validateDecodeButton(java.awt.event.KeyEvent evt) {//GEN-FIRST:event_validateDecodeButton
        // TODO add your handling code here:
        decodeButton.setEnabled(validateDecodeButtonWithBrowse());
    }//GEN-LAST:event_validateDecodeButton
    
    /**
     * Checks that all of the required fields have been entered in order for
     * decryption to be performed.
     * 
     * @return True if all the required fields have entries, false otherwise
     */
    private boolean validateDecodeButtonWithBrowse()
    {
        return (!encodedTextField1.getText().isEmpty()
                && !encodedTextField2.getText().isEmpty());
    }
    
    /**
     * The main method for the decryption portion of the Holt Visual Cryptography
     * Tool.
     * 
     * @param args the command line arguments
     */
    public static void main(String args[]) {
        /* Set the Nimbus look and feel */
        //<editor-fold defaultstate="collapsed" desc=" Look and feel setting code (optional) ">
        /* If Nimbus (introduced in Java SE 6) is not available, stay with the default look and feel.
         * For details see http://download.oracle.com/javase/tutorial/uiswing/lookandfeel/plaf.html 
         */
        try {
            for (javax.swing.UIManager.LookAndFeelInfo info : javax.swing.UIManager.getInstalledLookAndFeels()) {
                if ("Nimbus".equals(info.getName())) {
                    javax.swing.UIManager.setLookAndFeel(info.getClassName());
                    break;
                }
            }
        } catch (ClassNotFoundException ex) {
            java.util.logging.Logger.getLogger(DecodeFrame.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (InstantiationException ex) {
            java.util.logging.Logger.getLogger(DecodeFrame.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (IllegalAccessException ex) {
            java.util.logging.Logger.getLogger(DecodeFrame.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (javax.swing.UnsupportedLookAndFeelException ex) {
            java.util.logging.Logger.getLogger(DecodeFrame.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        }
        //</editor-fold>

        /* Create and display the form */
        java.awt.EventQueue.invokeLater(new Runnable() {
            public void run() {
                new DecodeFrame().setVisible(true);
            }
        });
    }
    //Variables for decoding
    private String[] shareFiles = new String[2];
    private String directoryForStorage = "";
    
    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton browseButton1;
    private javax.swing.JButton browseButton2;
    private javax.swing.JButton browseButton3;
    private javax.swing.JButton decodeButton;
    private javax.swing.JFileChooser directoryChooser;
    private javax.swing.JTextField encodedTextField1;
    private javax.swing.JTextField encodedTextField2;
    private javax.swing.JFileChooser imageChooser;
    private javax.swing.JButton jButton2;
    private javax.swing.JLabel jLabel1;
    private javax.swing.JLabel jLabel2;
    private javax.swing.JLabel jLabel3;
    private javax.swing.JLabel jLabel4;
    private javax.swing.JPanel jPanel1;
    private javax.swing.JPanel jPanel2;
    private javax.swing.JTextField stackedTextField;
    private javax.swing.JTextField storageDirectoryTextField;
    // End of variables declaration//GEN-END:variables
}
